Fix the transpile job

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -6,12 +6,4 @@ html
 		script(type='text/javascript', src='scripts/main.js' async)
 		meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
 	body
-		.wrapper
-			nav 
-				ul
-					li Something
-					li None
-			.content
-				h1 Get Fit!
-				p Pipe up!
-				p Buff out
+		.wrapper hi!
