- Added RECENT GAINS section - Updated things to work with Flummox 3 and React .13

--- a/stylesheets/_landing.less
+++ b/stylesheets/_landing.less
@@ -1,5 +1,7 @@
+// Main signup --------------------
 .signup-form {
 	text-align: center;
+	margin: 5rem 0;
 }
 
 .signup-form__input {
@@ -15,3 +17,13 @@
 .signup-button {
 	display: block;
 }
+
+// Recent Gains section -----------
+.recent-gains {
+	text-align: center;
+}
+
+.recent-gains__title {
+	text-transform: uppercase;
+}
+
